# ae-project

./: .gitignore  BasePred.cpp  BinarySearch.cpp  BinarySearchBFS.cpp  BinarySearchIte.cpp  BinarySearchIteArray.cpp  BinarySearchRec.cpp  BinarySearchTree.cpp  BinaryTreePred.cpp  CMakeLists.txt  LinearScanPred.cpp  Pred.cpp  RedBlackTree.cpp  arrayCompare.cpp  compare-graphs-heap-full.sh  compare-graphs-heap-unfolded.sh  compare-graphs-heap.sh  compare-graphs.sh  compare-graphs_matrix.sh  compare-graphs_matrix_1d_and_1dTransposed.sh  compare-graphs_matrix_simple_and_simpleTransposed.sh  compare-iterations.sh  main.cpp  min_heap  readme.md  run_it_1.sh  verify.cpp
cmake/: FindPAPI.cmake
fileutils/: FileUtils.cpp  FileUtils.h
heap/: BaseHeap.cpp  KaryHeap.cpp  QuadHeap.cpp  QueueHeap.cpp  SevenHeap.cpp  TernaryHeap.cpp  heap.cpp  main.cpp  verify.cpp
heap/unfolded/: Binaryheap.cpp  EightHeap.cpp  ElevenHeap.cpp  NineHeap.cpp  QuadHeap.cpp  SevenHeap.cpp  TenHeap.cpp  TernaryHeap.cpp
heap3/: heap3_4heap.txt  heap3_7heap_l1_dcm.txt  heap3_binaryHeap_l2_dcm.txt  heap3_sevenheap.txt  heap3_sevenheap_br_msp.txt  heap3_ternaryheap.txt  heap3_ternaryheap_l2_dcm.txt
heap4/: heap4_eightheap.txt  heap4_eightheap_br_cn.txt  heap4_eightheap_br_msp.txt  heap4_eightheap_l2_dcm.txt  heap4_elevenheap.txt  heap4_elevenheap_br_msp.txt  heap4_elevenheap_l1_dcm.txt  heap4_elevenheap_l2_dcm.txt  heap4_nineheap.txt  heap4_nineheap_br_msp.txt  heap4_tenheap_l1_dcm.txt
matrix/: main.cpp  mainRecursive.cpp  matrix.cpp  matrixrecursive.cpp  verify.cpp
rank/: RankSelect.cpp  RankSelectPop.cpp  RankSelectSpace.cpp  generate-graphs.sh  main.cpp  rankSelectNaive.cpp  verify.cpp
runs/: run_it.sh  run_it_3.sh  run_it_4.sh  run_it_heap.sh  run_it_matrix.sh  run_it_matrixRecursive.sh  run_it_rank.sh
runs/allRun1/: allRun1_1d.txt  allRun1_1dTranspose.txt  allRun1_1dTranspose_l1_dcm.txt  allRun1_1dTranspose_l2_dcm.txt  allRun1_1d_l1_dcm.txt  allRun1_1d_l2_dcm.txt  allRun1_matrixRecursive.txt  allRun1_matrixRecursive_l1_dcm.txt  allRun1_matrixRecursive_l2_dcm.txt  allRun1_matrixRecursive_tot_iis.txt  allRun1_matrixTile.txt  allRun1_matrixTile_l1_dcm.txt  allRun1_matrixTile_l2_dcm.txt  allRun1_simple.txt  allRun1_simpleTranspose.txt  allRun1_simpleTranspose_l1_dcm.txt  allRun1_simpleTranspose_l2_dcm.txt  allRun1_simple_l1_dcm.txt  allRun1_simple_l2_dcm.txt
runs/heap1/: heap1_3heap.txt  heap1_3heap_br_cn.txt  heap1_3heap_br_msp.txt  heap1_3heap_l1_dcm.txt  heap1_3heap_l2_dcm.txt  heap1_4heap.txt  heap1_4heap_br_cn.txt  heap1_4heap_br_msp.txt  heap1_4heap_l1_dcm.txt  heap1_4heap_l2_dcm.txt  heap1_7heap.txt  heap1_7heap_br_cn.txt  heap1_7heap_br_msp.txt  heap1_7heap_l1_dcm.txt  heap1_7heap_l2_dcm.txt  heap1_binaryHeap.txt  heap1_binaryHeap_br_cn.txt  heap1_binaryHeap_br_msp.txt  heap1_binaryHeap_l1_dcm.txt  heap1_binaryHeap_l2_dcm.txt  heap1_queueheap.txt  heap1_queueheap_br_cn.txt  heap1_queueheap_br_msp.txt  heap1_queueheap_l1_dcm.txt  heap1_queueheap_l2_dcm.txt
runs/heap11/: heap11_3heap.txt  heap11_3heap_br_msp.txt  heap11_binaryHeap_br_msp.txt  heap11_binaryHeap_l1_dcm.txt
runs/heap2/: heap2_quadheap.txt  heap2_quadheap_br_cn.txt  heap2_quadheap_br_msp.txt  heap2_quadheap_l1_dcm.txt  heap2_quadheap_l2_dcm.txt  heap2_sevenheap.txt  heap2_sevenheap_br_cn.txt  (+8 more)
timetest/: timetest_ternaryheap.txt  timetest_ternaryheap_br_msp.txt
(+105 files in other folders)
